@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2009-05-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> PerlMagick/Magick.xs: Fix Ping of blob.
+
+  <LI> PerlMagick/t/ping.t: Added tests for pinging files and blobs.
+
+  <LI> www/perl.html: Ping blob syntax is like $image-&gt;Ping(blob=&gt;@blob).
+
+</UL>
+<p>
 2009-05-25  Ralf Wildenhues  &lt;Ralf.Wildenhues@gmx.de&gt;
 
 <UL>
